# Math_File_Analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
project_demo/: main.py  notebook.ipynb  style.css
